🔧 fix(connection.component.html): reduce width of mat-form-field to 200px for better UI layout 🔧 fix(container.component.html): replace button element with a element for better accessibility and styling 🔧 fix(container.component.scss): increase width of mat-tab-link to 62px for better visibility 🔧 fix(ai.component.scss): adjust margin and width of buttons for better spacing and layout 🔧 fix(top-right.component.html): replace mat-button with mat-icon-button for better styling and consistency 🔧 fix(top-right.component.scss): add margin to host button for better spacing in responsive layout

--- a/front/src/app/container/container.component.scss
+++ b/front/src/app/container/container.component.scss
@@ -36,6 +36,7 @@ mat-drawer {
 	.mat-tab-link {
 		min-width: inherit;
 		height: 56px;
+		width: 62px;
 		color: #1de9b6;
 	}
 
