--- a/front/src/app/top-right/top-right.component.scss
+++ b/front/src/app/top-right/top-right.component.scss
@@ -1,3 +1,7 @@
+:host > button {
+	margin: 0px 6px;
+}
+
 @media (max-width: 1200px) {
 	:host {
 		display: none;
